# smtgcc

./: Makefile.in  README.md  config.h.in  configure  configure.ac
doc/: limitations.md
lib/: asm_parser.cpp  cache.cpp  cfg.cpp  check.cpp  cse.cpp  dead_code_elimination.cpp  eliminate_registers.cpp  ite_elim.cpp  loop_unroll.cpp  memory_opt.cpp  read_aarch64.cpp  read_bpf.cpp  read_ir.cpp  read_m68k.cpp  read_riscv.cpp  read_sh.cpp  reduce_bitsize.cpp  simplify_insts.cpp  smt_bitwuzla.cpp  smt_cvc5.cpp  smt_z3.cpp  smtgcc.cpp  smtgcc.h  util.cpp  util.h  validate_ir.cpp  vrp.cpp
plugin/: aarch64.cpp  bpf.cpp  gimple_conv.cpp  gimple_conv.h  m68k.cpp  riscv.cpp  sh.cpp  smtgcc-check-refine.cpp  smtgcc-tv-backend.cpp  smtgcc-tv.cpp  smtgcc-verify.cpp
tools/: smtgcc-check-refine.cpp  smtgcc-check-ub.cpp  smtgcc-opt.cpp  smtgcc-verify.cpp
